unpackaged/objects/copadovsm__Filter__c.object
<CustomObject>
	<fields>
		<fullName>copadovsm__Object_Type__c</fullName>
		<label>Object Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadovsm__Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Filters</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copadovsm__Parameters__c</fullName>
		<description>Filtering parameters stored in JSON format.</description>
		<label>Parameters</label>
		<length>131072</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copadovsm__Share_With__c</fullName>
		<label>Share With</label>
		<required>true</required>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetDefinition>
				<value>
					<fullName>Only me</fullName>
					<default>true</default>
					<label>Only me</label>
				</value>
				<value>
					<fullName>All users</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copadovsm__Value_Stream_Map__c</fullName>
		<label>Value Stream Map</label>
		<referenceTo>copadovsm__Value_Stream_Map__c</referenceTo>
		<relationshipLabel>Filters</relationshipLabel>
		<relationshipName>Filters</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<reparentableMasterDetail>true</reparentableMasterDetail>
		<type>MasterDetail</type>
	</fields>
	<label>Filter</label>
	<nameField>
		<label>Filter Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Filters</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>